# Learnlytics-AI-Powered-Academic-Performance-Platform

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  format.bat  main.py  pyproject.toml  requirements-prod.txt  requirements.txt  structure.txt
.github/workflows/: ci_cd.yaml
app/: fastapi_app.py  flask_app.py  streamlite_app.py
app/static/: styles.css
app/templates/: home.html  predict.html
config_dir/: model_config.yaml
data_schema/: schema.yaml
final_model/: model.pkl  preprocessor.pkl
mlflow-server/mlrun/: backend.db
notebook/: 1 . EDA STUDENT PERFORMANCE .ipynb
src/student_performance_indicator/components/: data_ingestion.py  data_tranformation.py  data_validation.py  model_evaluator.py  model_trainer.py
src/student_performance_indicator/constant/: training_pipeline.py
src/student_performance_indicator/entity/: artifact_entity.py  config_entity.py
src/student_performance_indicator/exception/: exception.py
src/student_performance_indicator/logger/: logger.py
src/student_performance_indicator/pipeline/: evaluation_pipeline.py  prediction_pipeline.py  training_pipeline.py
src/student_performance_indicator/utils/evaluate_utils/: evaluate_utils.py
src/student_performance_indicator/utils/main_utils/: utils.py
src/student_performance_indicator/utils/ml_utils/metric/: regression_metric.py
src/student_performance_indicator/utils/ml_utils/model/: estimator.py  model_factory.py
student_performance_etl/: student_performance_etl.py
